--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li> <a href="velha.html">Jogo da velha</a> </li>
           <li> <a href="api.html">API</a> </li>
         </ul>
-        <button type="button" onclick="window.open('https://github.com/ederapenas/')">Github</button>
+        <button type="button" onclick="window.open('https://github.com/ederapenas/projeto-pwm-web/tree/master')">Github</button>
       </nav>
       <div class="esboco">
         <h1>Olá!</h1>
